<resources>
    <string name="action_next">Next</string>
    <string name="action_resend">Resend</string>
    <string name="action_finish">Finish</string>
    <string name="action_check_phone">Check phone number</string>

    <string name="error_authentication_phone">The phone number is invalid, please verify and try again</string>
    <string name="error_authentication_quota">You have reach the limit of attempt, please try again later</string>
    <string name="error_authentication_code">An error occurred, please verify your information and connection and try again later</string>
    <string name="error_authentication_verify">Unable to verify your phone number</string>
    <string name="error_authentication_sign">Unable to sign in</string>
    <string name="error_authentication_team_validation">The team code entered is invalid, please check and try again</string>
    <string name="error_authentication_team_format">Something is wrong with the team code entered</string>
    <string name="error_wrong_firstname">Error: Cannot be empty and should contains only letters</string>
    <string name="error_wrong_lastname">Error: Cannot be empty and should contains only letters</string>
    <string name="error_wrong_phone">Error: Phone number invalid. Ex. +41791234567</string>
    <string name="error_wrong_email">Error: Email number invalid</string>
    <string name="error_missing_role">Please select a role in order to continue</string>
    <string name="error_wrong_code">The code entered is wrong, what do you want to do?</string>

    <string name="team_welcome">Choisir l equipe</string>
    <string name="team_field">Team code</string>
    <string name="team_field_placeholder">Team code here</string>
    <string name="register_welcome">Add data about you</string>
    <string name="register_firstName">Firstname</string>
    <string name="register_firstName_placeholder">Your firstname</string>
    <string name="register_lastName">LastName</string>
    <string name="register_lastName_placeholder">Your lastName</string>
    <string name="register_phone">Phone</string>
    <string name="register_phone_placeholder">Phone (ex. +41797431300)</string>
    <string name="register_email">Email</string>
    <string name="register_email_placeholder">Your email</string>
    <string name="register_role_placeholder">Role</string>
    <string name="code_validation">Enter the received code</string>
    <string name="phone_code_field_placeholder">Enter code here</string>

    <string name="team_code_verification">Verification of the team code…</string>
    <string name="phone_code_request">Send a phone code request…</string>
    <string name="team_selection">Select your team</string>
    <string name="loading_teams">Loading available teams...</string>
    <string name="error_team_missing">Select a team in order to continue</string>
</resources>
