<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.10"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.90"
            android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="32dp"
            android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endConstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_end="32dp"
            android:orientation="vertical"/>

    <TextView
            android:id="@+id/register_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/startConstraint"
            app:layout_constraintEnd_toEndOf="@+id/endConstraint"
            app:layout_constraintTop_toTopOf="@+id/guide_title"
            android:gravity="center"
            android:text="@string/register_welcome"/>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/content_scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="@+id/startConstraint"
            app:layout_constraintEnd_toEndOf="@+id/endConstraint"
            app:layout_constraintTop_toBottomOf="@+id/register_field"
            app:layout_constraintBottom_toTopOf="@+id/validate_btn">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_firstName_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginTop="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_firstName_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/register_firstName_placeholder"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:maxLength="25"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_lastname_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginTop="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_lastname_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:imeOptions="actionNext"
                        android:hint="@string/register_lastName_placeholder"
                        android:inputType="text"
                        android:maxLength="25"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginTop="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_phone_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:hint="@string/register_phone_placeholder"
                        android:maxLength="25"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/register_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginTop="@dimen/default_margin">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_email_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:hint="@string/register_email_placeholder"
                        android:maxLength="25"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:id="@+id/role_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="vertical"
                    android:visibility="visible">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/register_role_placeholder"
                        android:textColor="@color/light_grey"/>

                <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/role_spinner"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:prompt="@string/register_role_placeholder"
                        android:theme="@style/AppTheme.spinner"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
            android:id="@+id/validate_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/startConstraint"
            app:layout_constraintEnd_toEndOf="@+id/endConstraint"
            app:layout_constraintTop_toTopOf="@id/guide_button"
            android:text="@string/action_next"/>

</androidx.constraintlayout.widget.ConstraintLayout>